--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://abhishekbarve0612.github.io/covid-tracker",
+  "homepage": "https://abhishekbarve0612.github.io/covid-tracker-client",
   "name": "covid-tracker-client",
   "version": "0.1.0",
   "private": true,
